--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "openai": "^3.2.1",
     "twitter-api-sdk": "^1.2.1",
     "twitter-api-v2": "^1.14.2"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.101",
+    "@types/node-fetch": "^2.6.2",
     "serverless": "^3.21.0",
     "serverless-dotenv-plugin": "^4.0.2",
     "serverless-offline": "^12.0.4",
-    "serverless-plugin-typescript": "^2.1.2",
-    "typescript": "^4.7.4"
+    "serverless-plugin-typescript": "^2.1.4",
+    "typescript": "^5.0.2"
   }
 }
