--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "crypto": "^1.0.1",
+    "got": "^12.6.0",
+    "oauth-1.0a": "^2.2.6",
     "openai": "^3.2.1",
+    "querystring": "^0.2.1",
     "twitter-api-sdk": "^1.2.1",
     "twitter-api-v2": "^1.14.2"
   },
